<resources>
    <string name="app_name">Galilel Wallet</string>
    <string name="btn_create_wallet">Create Wallet</string>
    <string name="btn_restore_wallet">Restore Wallet</string>
    <string name="restore_wallet_message">Select a backup of the wallet from a storage unit</string>
    <string name="pincode_message">For your security a PIN code is needed</string>
    <string name="select_file">Select File</string>
    <string name="action_qr">QR Code</string>
    <string name="action_add">Add Contact</string>
    <string name="string_password">Password</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="set_amount">Write amount to send</string>
    <string name="set_amount_gali">GALI</string>
    <string name="set_amount_usd">Write amount</string>
    <string name="add_all">ADD ALL</string>
    <string name="title_amount">Amount</string>
    <string name="title_address">Address</string>
    <string name="title_name">Name</string>
    <string name="title_description">Description</string>
    <string name="title_receiver_name">Receiver\'s name</string>
    <string name="title_date">Date</string>
    <string name="set_address">Write address or label name</string>
    <string name="add_address">Write address or label name</string>
    <string name="set_name">Add name</string>
    <string name="set_description">Add a description</string>
    <string name="btn_send">Send</string>
    <string name="btn_request">Request</string>
    <string name="payment_request">Payment Request</string>
    <string name="settings_subtitle_security">Security</string>
    <string name="backup_wallet_message">Your backup will be encrypted with the password you choose and saved to an external storage drive.</string>
    <string name="settings_subtitle_preference">Preference</string>
    <string name="settings_subtitle_about">About</string>
    <string name="restore_wallet">Restore wallet</string>
    <string name="backup_wallet">Backup wallet</string>
    <string name="change_pincode">Change PIN code</string>
    <string name="local_currency">Local Currency</string>
    <string name="local_currency_usd">USD</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="add_name">Add a name</string>
    <string name="scan_camera_problem_dialog_title">Sorry</string>
    <string name="scan_camera_problem_dialog_message">The camera has a problem. You probably need to restart the device.</string>
    <string name="scan_camera_permission_dialog_title">Camera permission</string>
    <string name="scan_camera_permission_dialog_message">In order to scan QR codes, you need to grant permission to use the camera.</string>
    <string name="scan_result_title">Scanner result</string>
    <string name="scan_result_address_title">Address detected</string>
    <string name="node_selection_message">You can select one of the node available or add one </string>
    <string name="select_node">Select Node</string>
    <string name="select">Select a Node</string>
    <string name="text_version">Version</string>
    <string name="network_monitor">Network monitor</string>
    <string name="settings_report">Report issue</string>
    <string name="send_message">Transaction details:</string>
    <string name="save_message">Do you want to save the address?</string>
    <string name="confirm">Confirm</string>
    <string name="action_scan">scanner</string>
    <string name="btn_select_node">Add node</string>
    <string name="node_default">Default values</string>
    <string name="title_no_trusted_peer_connection">Peer issue</string>
    <string name="message_no_trusted_peer_connection">Trusted peer connection fail</string>
    <string name="share_address_text">Share address</string>
    <string name="error_sending_coins">Send coins fail</string>
    <string name="ssl_port">SSL port</string>
    <string name="hint_ssl_port">Default SSL port</string>
    <string name="host">Host</string>
    <string name="hint_host">Add a Host</string>
    <string name="tcp_port">TCP port</string>
    <string name="hint_tcp_port">Default TCP port</string>
    <string name="add_memo">Monthly payment</string>
    <string name="backup_create">Create Backup</string>
    <string name="transaction_hash">Transaction ID</string>
    <string name="explorer">Explorer</string>
    <string name="backup_passwords_doesnt_match">Passwords doesn\'t match, please enter password again.</string>
    <string name="backup_completed">Backup completed</string>
    <string name="backup_completed_text">Congratulations! Your wallet backup is complete. It has been saved in the folder at\n\n%s</string>
    <string name="import_keys_dialog_message">Select one of your backups files loaded from folder\n\n%s</string>
    <string name="backup_restore">Restore</string>
    <string name="import_export_keys_dialog_failure_title">Restore wallet fail</string>
    <string name="import_keys_dialog_failure">Error importing backup file\n\n%s</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_retry">Retry</string>
    <string name="restore_wallet_dialog_success">Wallet was restored</string>
    <string name="restore_wallet_dialog_success_replay">Your wallet was successfully restored. Its balance will be determined next. This will take some time.</string>
    <string name="unavailable">Amount unspendable:</string>
    <string name="sending_tx">Sending transaction...</string>
    <string name="currency_message">Select the local currency of your choice</string>
    <string name="title_fee">Fee</string>
    <string name="title_currency">Local Currency</string>
    <string name="title_gali_send">Amount send</string>
    <string name="empty_message_address">You don\'t have any saved address yet.</string>
    <string name="error_message">There seems to been an error with your transaction</string>
    <string name="settings_change_trusted_node">Change trusted node</string>
    <string name="settings_reset_blockchain">Reset blockchain</string>
    <string name="save">Save</string>
    <string name="tutorial_message">Galilel is an open-source public and private Proof-of-Stake digital crypto currency for fast (using SwiftX), private (Zerocoin protocol) and secure micro transactions.\n\nGalilel aims to be the first general purpose crypto currency with Hybrid Consensus Algorithm, Dynamic Zerocoin Proof-of-Stake, Proof-of-Transaction and Masternode voting for period based reward burning.</string>
    <string name="next_words">Next 8 words</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="restore">Restore</string>
    <string name="start">Start</string>
    <string name="title_slide1">Highest Security</string>
    <string name="desc_slide1">One of the worlds first mobile wallets which supports two-factor authentication for encrypted private keys. It allows you to protect your wallet without any risk of electronic theft.</string>
    <string name="title_slide2">Instant Transaction</string>
    <string name="desc_slide2">Already very fast, Galilel transactions using SwiftX are instant with zero confirmation wait time required.</string>
    <string name="title_slide3">Full Privacy</string>
    <string name="desc_slide3">Galilel is already the worlds first crypto currency which includes Dynamic Zerocoin Proof-of-Stake. Staking privacy coins makes it a truly anonymous crypto-currency!</string>
    <string name="title_slide4">Trusted Nodes Federation</string>
    <string name="desc_slide4">Trusted nodes federation make light Proof-of-Stake wallets possible, you can rely on them or create your own trusted node!</string>
    <string name="option_add_node">Add node</string>
    <string name="report_issue_dialog_description">Issue description</string>
    <string name="report_issue_dialog_collect_device_info">Append device information</string>
    <string name="report_issue_dialog_collect_application_log">Append application log</string>
    <string name="report_issue_dialog_collect_wallet_dump">Append wallet dump</string>
    <string name="report_issue_dialog_collect_installed_packages">Append list of installed packages</string>
    <string name="report_issue_dialog_collect_db_data">Append databases data</string>
    <string name="report_issue_dialog_report">Report</string>
    <string name="button_cancel">Cancel</string>
    <string name="report_issue_dialog_mail_intent_chooser">Send report using...</string>
    <string name="report_issue_dialog_mail_intent_failed">Sending report failed.</string>
    <string name="report_issue_dialog_message_issue">Please describe your issue precisely enough to be reproduced.</string>
    <string name="report_issuea_dialog_title">Report issue</string>
    <string name="invalid_inputs">Invalid inputs</string>
    <string name="send_error_dialog_tag">send error dialog tag</string>
    <string name="restore_dialog_tag">restore dialog tag</string>
    <string name="restore_dialog_error">restore dialog error</string>
    <string name="settings_support">Support</string>
    <string name="support_subject">Galilel wallet support</string>
    <string name="tutorial">Tutorial</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="copy_message">Address copied to the clipboard</string>
    <string name="security_message">Please write this in a safe place and in horizontal order, you\'ll need them to restore your wallet.\n\nDon\'t share this words to anybody. Be careful, whoever has this words is the owner of the coins!</string>
    <string name="security_message_confirmation">You have to confirm in the next screen</string>
    <string name="confirmation_message">Verify your security words</string>
    <string name="order_message_confirmation">Choose the words in the right order</string>
    <string name="backup_words">Mnemonic Code</string>
    <string name="btn_secure">Already noted</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="pincode_saved">New PIN saved</string>
    <string name="insert_old_pin">Insert your current PIN</string>
    <string name="insert_new_pin">Insert new PIN</string>
    <string name="invalid_pincode">Invalid PIN</string>
    <string name="contact_already_exist">Contact address already exist</string>
    <string name="invalid_input_address">Invalid address</string>
    <string name="reminder_backup">Backup reminder</string>
    <string name="reminder_backup_body">One of the most important parts of a mobile wallet is the backup, do you want to do it now?</string>
    <string name="button_ok">Ok</string>
    <string name="backup_succed_dialog">backup_succed_dialog</string>
    <string name="error_no_connectivity_title">No internet connection</string>
    <string name="error_no_connectivity_body">The app is going to save your transaction until the connection back.\n\nDo you want to continue?</string>
    <string name="cannot_restore_wallet">Error, cannot restore wallet, please verify your password</string>
    <string name="dialog_reset_blockchain_title">Reset Blockchain</string>
</resources>