<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/greyTemp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/nodeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/node_selection_message"
        android:textColor="@color/grey85black"
        android:textSize="18sp"
        android:paddingTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nodeMessage"
        android:layout_centerHorizontal="true"
        android:id="@+id/spinner_container"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <Spinner
            android:gravity="center_vertical"
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:background="@drawable/bg_spinner"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:popupBackground="@color/galilelWhite"
            android:layout_height="wrap_content"
            android:prompt="@string/select" />

        <Button
            android:id="@+id/openDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:background="@color/transparent"
            android:text="@string/btn_select_node"
            android:textColor="@color/darkBrown1"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:visibility="visible"
            android:background="@color/transparent"
            android:text="@string/node_default"
            android:textColor="@color/darkBrown1"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSelectNode"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_brown"
        android:text="@string/select_node"
        android:layout_marginBottom="12dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:stateListAnimator="@null"
        android:textColor="@color/galilelWhite"
        android:textSize="14sp" />

</RelativeLayout>
