<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingTop="@dimen/tutorial_padding_top"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	android:background="@color/darkBrown1">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/img_step_4" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/tutorial_vertical_padding"
		android:text="@string/title_slide4"
		android:textColor="@color/galilelWhite"
		android:textSize="@dimen/tutorial_message_text_size"
		android:textAllCaps="true"
		android:textStyle="bold" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/tutorial_vertical_padding"
		android:text="@string/desc_slide4"
		android:textColor="@color/galilelWhite"
		android:textSize="@dimen/tutorial_message_text_size"
		android:textAlignment="center" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:orientation="vertical"
		android:gravity="bottom">

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_select_node"
			android:textColor="@color/darkBrown1"
			android:textSize="@dimen/tutorial_button_text_size"
			android:background="@drawable/button_white"
			android:onClick="btnNodeClick" />

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/tutorial_pager_height" />

</LinearLayout>
