<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingTop="@dimen/tutorial_padding_top"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	android:background="@color/darkBrown1"
	tools:context="galilel.org.galilelwallet.ui.base.BaseDrawerActivity">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@mipmap/img_login_logo" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/tutorial_vertical_padding"
		android:text="@string/tutorial_message"
		android:textColor="@color/galilelWhite"
		android:textSize="@dimen/tutorial_message_text_size"
		android:textAlignment="center" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:orientation="vertical"
		android:gravity="bottom">

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="12dp"
			android:paddingTop="12dp"
			android:text="@string/btn_create_wallet"
			android:textColor="@color/darkBrown1"
			android:textSize="@dimen/tutorial_button_text_size"
			android:background="@drawable/button_white"
			android:id="@+id/btnCreate" />

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="12dp"
			android:paddingTop="12dp"
			android:text="@string/btn_restore_wallet"
			android:textSize="@dimen/tutorial_button_text_size"
			android:textColor="@color/galilelWhite"
			android:background="@android:color/transparent"
			android:id="@+id/btnRestore" />

	</LinearLayout>

</LinearLayout>
