<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/greyTemp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:gravity="center"
    android:layout_gravity="center"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/backupMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/backup_wallet_message"
            android:textColor="@color/grey85black"
            android:textSize="18sp"
            android:gravity="center_horizontal" />

        <EditText
            android:id = "@+id/edit_password"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:padding="8dp"
            android:paddingBottom="11dp"
            android:paddingTop="11dp"
            android:inputType="textPassword"
            android:background="@drawable/transaction_inputs"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginBottom="10dp"
            android:hint="@string/string_password"
            android:textColor="@color/grey85black"
            android:textColorHint="@color/grey35black"
            android:textSize="15sp" />

        <EditText
            android:id = "@+id/edit_repeat_password"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:padding="8dp"
            android:paddingBottom="11dp"
            android:paddingTop="11dp"
            android:inputType="textPassword"
            android:background="@drawable/transaction_inputs"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginBottom="10dp"
            android:hint="@string/repeat_password"
            android:textColor="@color/grey85black"
            android:textColorHint="@color/grey35black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/edit_repeat_password"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="12dp"
            android:id="@+id/progress"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_backup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_brown"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/backup_wallet"
            android:textColor="@color/galilelWhite"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>
