<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/greyTemp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:gravity="center"
    android:layout_gravity="center"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/restoreMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/restore_wallet_message"
            android:textColor="@color/grey85black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_spinner"
            android:drawableRight="@mipmap/ic_add_file"
            android:stateListAnimator="@null"
            android:gravity="left|center_vertical"
            android:padding="8dp"
            android:paddingBottom="11dp"
            android:paddingTop="11dp"
            android:prompt="@string/select_file"
            android:text="@string/select_file"
            android:textColor="@color/grey85black"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:background="@drawable/transaction_inputs"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/ic_view_white"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/color_cursor"
                android:hint="@string/string_password"
                android:paddingLeft="11dp"
                android:paddingBottom="11dp"
                android:paddingTop="11dp"
                android:textSize="15sp"
                android:textColorHint="@color/grey35black"
                android:textColor="@color/grey85black"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/passwordLayout"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="bottom|center"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="12dp"
            android:id="@+id/progress"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_restore"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_brown"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/restore_wallet"
            android:textColor="@color/galilelWhite"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>
